@@ -3,21 +3,23 @@
 <HTML>
 	<HEAD>
 		<title>MalformedTestPage</title>
-		<meta name="GENERATOR" Content="Microsoft Visual Studio 7.0">
-		<meta name="CODE_LANGUAGE" Content="C#">
-		<meta name="vs_defaultClientScript" content="JavaScript">
-		<meta name="vs_targetSchema" content="http://schemas.microsoft.com/intellisense/ie5">
+		<meta name="GENERATOR" Content="Microsoft Visual Studio 7.0" />
+		<meta name="CODE_LANGUAGE" Content="C#" />
+		<meta name="vs_defaultClientScript" content="JavaScript" />
+		<meta name="vs_targetSchema" content="http://schemas.microsoft.com/intellisense/ie5" />
 	</HEAD>
 	<body MS_POSITIONING="GridLayout">
 		<form id="MalformedTestPage" method="post" runat="server">
 			This page has malformed XHTML.
 			<br>
 			The DOCTYPE tag is missing a URL, the meta tags are missing their closing 
-			slash, and the br tag is missing its closing slash.
+			slash (actually, they're not, because that's not supported yet, but they should be), and the br tag is missing its closing slash.
 			<br>
 			<br>
 			It's typical of a page generated by Visual Studio .NET, and NUnitAsp must be to 
 			test it.
+			<br>
+			<br>
 			<p>
 				One ASP.NET control is included so there's something to test against.
 				<br>
